fixed icon overflow in split screen

--- a/footer-new.css
+++ b/footer-new.css
@@ -113,13 +113,7 @@
     font-size: 12px;
 }
 
-@media screen and (max-width: 600px) {
-    .footer-items {
-        width: 50%;
-    }
-}
-
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 976px) {
     .footer-items {
         width: 100%;
     }
